--- a/preferencesdialog.ui
+++ b/preferencesdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>388</width>
-    <height>178</height>
+    <width>324</width>
+    <height>150</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,8 +35,14 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="label">
+         <property name="minimumSize">
+          <size>
+           <width>65</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Input default folder</string>
+          <string>Data folder</string>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
@@ -44,28 +50,18 @@
         </widget>
        </item>
        <item>
-        <widget class="QTextBrowser" name="textBrowserInputFolder">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>150</width>
-           <height>50</height>
-          </size>
-         </property>
-        </widget>
+        <widget class="QLineEdit" name="le_dataFolder"/>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Changer</string>
+          <string>Change</string>
          </property>
         </widget>
        </item>
@@ -75,8 +71,14 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_2">
+         <property name="minimumSize">
+          <size>
+           <width>65</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Output default folder</string>
+          <string>Output folder</string>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
@@ -84,55 +86,18 @@
         </widget>
        </item>
        <item>
-        <widget class="QTextBrowser" name="textBrowserOutputFolder">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>150</width>
-           <height>50</height>
-          </size>
-         </property>
-         <property name="layoutDirection">
-          <enum>Qt::LeftToRight</enum>
-         </property>
-         <property name="inputMethodHints">
-          <set>Qt::ImhNone</set>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Plain</enum>
-         </property>
-         <property name="sizeAdjustPolicy">
-          <enum>QAbstractScrollArea::AdjustIgnored</enum>
-         </property>
-         <property name="autoFormatting">
-          <set>QTextEdit::AutoNone</set>
-         </property>
-         <property name="lineWrapMode">
-          <enum>QTextEdit::WidgetWidth</enum>
-         </property>
-         <property name="tabStopWidth">
-          <number>80</number>
-         </property>
-         <property name="cursorWidth">
-          <number>1</number>
-         </property>
-         <property name="openLinks">
-          <bool>false</bool>
-         </property>
-        </widget>
+        <widget class="QLineEdit" name="le_outputFolder"/>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_2">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Changer</string>
+          <string>Change</string>
          </property>
         </widget>
        </item>
@@ -155,16 +120,48 @@
           <string>Save output at default output folder on &quot;Save&quot; press. Output file is named:&quot;gliltch&quot; + date/time stamp + &quot;.png&quot;</string>
          </property>
          <property name="text">
-          <string>Sauvegarde rapide</string>
+          <string>Autosave</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton_4">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>Cancel</string>
          </property>
@@ -172,8 +169,14 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_3">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Ok</string>
+          <string>Apply</string>
          </property>
         </widget>
        </item>
